stack/vpc.yml
vpc:
  Resources:
    PawlogVPC:
      Type: AWS::EC2::VPC
      Properties:
        CidrBlock: 172.31.0.0/16
        InstanceTenancy: default
        EnableDnsSupport: true
        EnableDnsHostnames: true
        Tags:
          - Key: Name
            Value: PawlogVPC

    PawlogSecurityGroup:
      DependsOn: PawlogVPC
      Type: AWS::EC2::SecurityGroup
      Properties:
        GroupDescription: Security group of Pawlog VPC
        VpcId:
          Ref: PawlogVPC
        Tags:
          - Key: Name
            Value: PawlogSecurityGroup
        SecurityGroupIngress:
          - IpProtocol: tcp
            FromPort: 22
            ToPort: 22
            CidrIp: 0.0.0.0/0

    PawlogSecurityGroupIngress:
      Type: AWS::EC2::SecurityGroupIngress
      Properties:
        GroupId:
          Ref: PawlogSecurityGroup
        SourceSecurityGroupId:
          Ref: PawlogSecurityGroup
        IpProtocol: -1

    PublicSubnet:
      DependsOn: PawlogVPC
      Type: AWS::EC2::Subnet
      Properties:
        VpcId:
          Ref: PawlogVPC
        AvailabilityZone: ${self:provider.region}a
        CidrBlock: 172.31.64.0/20
        Tags:
          - Key: Name
            Value: PublicSubnet

    PrivateSubnetA:
      DependsOn: PawlogVPC
      Type: AWS::EC2::Subnet
      Properties:
        VpcId:
          Ref: PawlogVPC
        AvailabilityZone: ${self:provider.region}a
        CidrBlock: 172.31.16.0/20
        Tags:
          - Key: Name
            Value: PrivateSubnetA

    PrivateSubnetB:
      DependsOn: PawlogVPC
      Type: AWS::EC2::Subnet
      Properties:
        VpcId:
          Ref: PawlogVPC
        AvailabilityZone: ${self:provider.region}b
        CidrBlock: 172.31.32.0/20
        Tags:
          - Key: Name
            Value: PrivateSubnetB

    PrivateSubnetC:
      DependsOn: PawlogVPC
      Type: AWS::EC2::Subnet
      Properties:
        VpcId:
          Ref: PawlogVPC
        AvailabilityZone: ${self:provider.region}c
        CidrBlock: 172.31.48.0/20
        Tags:
          - Key: Name
            Value: PrivateSubnetC

    PrivateSubnetGroup:
      Type: AWS::RDS::DBSubnetGroup
      Properties:
        DBSubnetGroupDescription: Private subnet group
        SubnetIds:
          - Ref: PrivateSubnetA
          - Ref: PrivateSubnetB
          - Ref: PrivateSubnetC
        Tags:
          - Key: Name
            Value: PrivateSubnetGroup

    PublicRouteTable:
      DependsOn: PawlogVPC
      Type: AWS::EC2::RouteTable
      Properties:
        VpcId:
          Ref: PawlogVPC
        Tags:
          - Key: Name
            Value: PublicRouteTable
    PublicSubnetRouteTableAssociation:
      Type: AWS::EC2::SubnetRouteTableAssociation
      Properties:
        RouteTableId:
          Ref: PublicRouteTable
        SubnetId:
          Ref: PublicSubnet

    PrivateRouteTable:
      DependsOn: PawlogVPC
      Type: AWS::EC2::RouteTable
      Properties:
        VpcId:
          Ref: PawlogVPC
        Tags:
          - Key: Name
            Value: PrivateRouteTable
    SubnetARouteTableAssociation:
      Type: AWS::EC2::SubnetRouteTableAssociation
      Properties:
        RouteTableId:
          Ref: PrivateRouteTable
        SubnetId:
          Ref: PrivateSubnetA
    SubnetBRouteTableAssociation:
      Type: AWS::EC2::SubnetRouteTableAssociation
      Properties:
        RouteTableId:
          Ref: PrivateRouteTable
        SubnetId:
          Ref: PrivateSubnetB
    SubnetCRouteTableAssociation:
      Type: AWS::EC2::SubnetRouteTableAssociation
      Properties:
        RouteTableId:
          Ref: PrivateRouteTable
        SubnetId:
          Ref: PrivateSubnetC

    NATElasticIP:
      Type: AWS::EC2::EIP
      Properties:
        Domain: vpc

    NATGateway:
      Type: AWS::EC2::NatGateway
      DependsOn: NATElasticIP
      Properties:
        AllocationId: !GetAtt NATElasticIP.AllocationId
        SubnetId:
          Ref: PublicSubnet

    NATRoute:
      Type: AWS::EC2::Route
      DependsOn: NATGateway
      Properties:
        RouteTableId:
          Ref: PrivateRouteTable
        DestinationCidrBlock: 0.0.0.0/0
        NatGatewayId:
          Ref: NATGateway

    PawlogVPCInternetGateway:
      Type: AWS::EC2::InternetGateway
      Properties:
        Tags:
          - Key: Name
            Value: PawlogVPCInternetGateway

    InternetGatewayAttachment:
      Type: AWS::EC2::VPCGatewayAttachment
      DependsOn: PawlogVPCInternetGateway
      Properties:
        InternetGatewayId: !Ref PawlogVPCInternetGateway
        VpcId: !Ref PawlogVPC

    IGRoute:
      Type: AWS::EC2::Route
      DependsOn: PawlogVPCInternetGateway
      Properties:
        RouteTableId:
          Ref: PublicRouteTable
        DestinationCidrBlock: 0.0.0.0/0
        GatewayId:
          Ref: PawlogVPCInternetGateway

  Outputs:
    SecurityGroupName:
      Value: !Ref PawlogSecurityGroup
      Export:
        Name: SecurityGroupName

    PrivateSubnetAName:
      Value: !Ref PrivateSubnetA
      Export:
        Name: PrivateSubnetAName
    PrivateSubnetBName:
      Value: !Ref PrivateSubnetB
      Export:
        Name: PrivateSubnetBName
    PrivateSubnetCName:
      Value: !Ref PrivateSubnetC
      Export:
        Name: PrivateSubnetCName
    PrivateSubnetGroupName:
      Value: !Ref PrivateSubnetGroup
      Export:
        Name: PrivateSubnetGroupName
